transparency detection